--- a/templates/index.html
+++ b/templates/index.html
@@ -42,10 +42,12 @@ img{
 	        <input class="form-control" type='file' name='userfile' placeholder='your image'>
 	        <button type="submit" class="btn btn-primary"> Submit </button>
 	    </form>
+	    <br>
+	    <br>	
     
 	   <div class='row'>
 	   	  <div class="col-sm-4">	
-	   		<img src="{{my_image}}">
+	   		<img src="{{my_image}}" />
 	   		<br>
 	   	  </div>		
 	      <div class='col-sm-8'>
